Updated with version: 4.7.1 changes

--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,9 @@
 
 UNRELEASED:
 
+Version: 4.7.1, Date: 2020-02-28
+- Fixed an issue with Firefox user data migration
+
 Version: 4.7.0, Date: 2020-02-27
 - Updated the PubNub bundled library to version 4.27.2
 - Added logic migrate Firefox users data from the legacy data structures to new data structures (Firefox Only)
