--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,16 @@
 
 UNRELEASED:
 
+Version: 4.7.4, Date: 2020-03-06
+- Fixed an issue in the MS Edge user data migration code
+
+Version: 4.7.3, Date: 2020-03-04
+- Removed debug statements in the MS Edge user data migration code
+- Fixed a bug in the survey logic
+
+Version: 4.7.2, Date: 2020-03-03
+- Added debug statements to the MS Edge user data migration
+
 Version: 4.7.1, Date: 2020-02-28
 - Fixed an issue with Firefox user data migration
 
