Updated with version: 4.9.0 changes

--- a/_locales/en_GB/messages.json
+++ b/_locales/en_GB/messages.json
@@ -2998,5 +2998,181 @@
   "close_help_flow": {
     "message": "Close help flow and go back to the pop-up menu.",
     "description": "Aria label for close button in help flow (in popup menu)"
+  },
+  "stats":{
+    "message":"Stats",
+    "description":"Title of the statistics (metrics) tab of the Options page"
+  },
+  "statstitle":{
+    "message":"Statistics Dashboard",
+    "description":"On page title of the statistics page of the Options page"
+  },
+  "stats_opt_in_header":{
+    "message":"Want to see your AdBlock stats? ",
+    "description":"On page text of the statistics page of the Options page"
+  },
+  "stats_opt_in_msg":{
+    "message":"Opt in to local stats collection to see your AdBlock statistics, such as which sites you block the most ads and trackers on, total blocks over time, and images swapped for Premium users.",
+    "description":"On page text of the statistics page of the Options page"
+  },
+  "stats_opt_in_local_msg":{
+    "message":"Opt in to local stats collection as well in order to access all of your AdBlock stats, such as which sites you block the most ads and trackers on, total blocks over time, and images swapped for Premium users.",
+    "description":"On page text of the statistics page of the Options page"
+  },
+  "stats_already_opted":{
+    "message":"You've already opted in to sharing anonymous usage data with us.",
+    "description":"On page text of the statistics page of the Options page"
+  },
+  "stats_opt_in_text_button":{
+    "message":"Opt In",
+    "description":"Text in the Opt In button on the statistics page of the Options page"
+  },
+  "stats_opt_in_local_text_button":{
+    "message":"Opt in to local stats collection",
+    "description":"Text in the Opt In button on the statistics page of the Options page"
+  },
+  "stats_opt_in_data_collect":{
+    "message":"Help improve AdBlock by sharing [[anonymous usage data]]",
+    "description":"Text in the Opt In button on the statistics page of the Options page"
+  },
+  "stats_ads_blocked":{
+    "message":"Ads Blocked",
+    "description":"Text on the statistics page of the Options page within the ads blocked panel"
+  },
+  "stats_hide_data":{
+    "message":"Hide Stats",
+    "description":"text shown on panels during mouse over on the statistics page of the Options page within the ads blocked panel"
+  },
+  "stats_show_data":{
+    "message":"Show Stats",
+    "description":"text shown on panels during mouse over on the statistics page of the Options page within the ads blocked panel"
+  },
+  "stats_trackers_blocked":{
+    "message":"Trackers Blocked",
+    "description":"Text on the statistics page of the Options page within the ads blocked panel"
+  },
+  "stats_replaced_blocked":{
+    "message":"Images Swapped",
+    "description":"Text on the statistics page of the Options page within the ads blocked panel"
+  },
+  "trackers_cta_header": {
+    "message":"Trackers",
+    "description":"Header text on the statistics page of the Options page in the trackers panel"
+  },
+  "trackers_cta_msg": {
+    "message":"Enable the [[Easy Privacy filter list]] to start blocking trackers",
+    "description":"message body text on the statistics page of the Options page in the trackers panel"
+  },
+  "trackers_button_text": {
+    "message":"Enable",
+    "description":"button text on the statistics page of the Options page in the trackers panel"
+  },
+  "premium_cta_msg_not_enabled": {
+    "message":"It looks like you don’t have image swap enabled.",
+    "description":"message body text on the statistics page of the Options page in the image swap panel for premium users that haven't enabled image swap"
+  },
+  "premium_cta_msg": {
+    "message":"Unlock image swap tracking and more with Premium.",
+    "description":"message body text on the statistics page of the Options page in the image swap panel"
+  },
+  "premium_cta_button_text_not_enabled":{
+    "message":"Turn on",
+    "description":"button text on the statistics page of the Options page in the image swap panel for premium users that haven't enabled image swap"
+  },
+  "premium_cta_button_text":{
+    "message":"Get Premium",
+    "description":"button text on the statistics page of the Options page in the image swap panel"
+  },
+  "parent_menu_item_time":{
+    "message":"Blocks over time",
+    "description":"menu item text on the statistics page of the Options page"
+  },
+  "parent_menu_item_site":{
+    "message":"Blocks by site",
+    "description":"menu item text on the statistics page of the Options page"
+  },
+  "sub_menu_item_today":{
+    "message":"Today",
+    "description":"sub menu item text on the statistics page of the Options page"
+  },
+  "sub_menu_item_week":{
+    "message":"This Week",
+    "description":"sub menu item text on the statistics page of the Options page"
+  },
+  "sub_menu_item_month":{
+    "message":"This Month",
+    "description":"sub menu item text on the statistics page of the Options page"
+  },
+  "sub_menu_item_year":{
+    "message":"This Year",
+    "description":"sub menu item text on the statistics page of the Options page"
+  },
+  "sub_menu_item_all":{
+    "message":"All Time",
+    "description":"sub menu item text on the statistics page of the Options page"
+  },
+  "delete_panel_title":{
+    "message":"Delete Blocking Stats",
+    "description":"title text on the delete overlay on the statistics page of the Options page"
+  },
+  "delete_detail_msg_part_I":{
+    "message":"You can delete your locally stored blocking stats here.",
+    "description":"text on the delete overlay on the statistics page of the Options page"
+  },
+  "delete_detail_msg_part_II":{
+    "message": "This will remove all data currently displayed on your stats page, including top sites blocked.",
+    "description":"text on the delete overlay on the statistics page of the Options page"
+  },
+  "delete_detail_msg_part_III":{
+    "message":"Your stats are only stored on your device, and any stats you delete CANNOT be recovered.",
+    "description":"text on the delete overlay on the statistics page of the Options page"
+  },
+  "delete_all_stats_data":{
+    "message":"Delete my current stored blocking stats",
+    "description":"text related to the delete all data checkbox on the statistics page of the Options page"
+  },
+  "opt_out_stats_data":{
+    "message": "Don’t collect my blocking stats in future",
+    "description":"text related to the opt out data collection checkbox on the statistics page of the Options page"
+  },
+  "delete_detail_page_2_msg_part_I":{
+    "message":"Are you sure?",
+    "description":"text on page 2 of the delete modal box on the statistics page of the Options page"
+  },
+  "stats_go_back_text_button":{
+    "message":"Go back",
+    "description":"button text on page 2 of the delete modal box on the statistics page of the Options page"
+  },
+  "stats_im_sure_text_button":{
+    "message":"I'm sure",
+    "description":"button text on page 2 of delete modal box on the statistics page of the Options page"
+  },
+  "no_data_title":{
+    "message":"No Stats",
+    "description":"title text on warning message when there's no user data to show on the statistics page of the Options page"
+  },
+  "no_data_msg_part_I":{
+    "message":"You don't currently have any blocking stats to display.",
+    "description":"text on warning message when there's no user data to show on the statistics page of the Options page"
+  },
+  "no_data_msg_part_II":{
+    "message":"Refresh this page after surfing the web to start seeing blocking stats.",
+    "description":"text on warning message when there's no user data to show on the statistics page of the Options page"
+  },
+  "loading_in_progress":{
+    "message":"loading in progress",
+    "description":"Text in the aria-label attribute of an icon indicating that page is currently loading"
+  },
+  "stats_ads_blocked_aria_label":{
+    "message":"Number of Ads Blocked",
+    "description":"Text in the aria-label attribute of an icon for the Blocks by site column heading"
+  },
+  "stats_trackers_blocked_aria_label":{
+    "message":"Number of Trackers Blocked",
+    "description":"Text in the aria-label attribute of an icon for the Blocks by site column heading"
+  },
+  "stats_replaced_blocked_aria_label":{
+    "message":"Number of Images Swapped",
+    "description":"Text in the aria-label attribute of an icon for the Blocks by site column heading"
   }
 }
