Updated with version: 4.10.0 changes

--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,10 @@
 
 UNRELEASED:
 
+Version: 4.10.0, Date: 2020-04-05
+- Updated translations
+- Show the /update page to let users know what features have been updated in the last 6 months.
+
 Version: 4.9.0, Date: 2020-03-31
 - Added ad blocking statistics to the AdBlock Options page
 
